Fri Apr 06 09:03:19 CEST 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO version 2.1.1 released.

Tue Apr  3 16:52:21 UTC 2012  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/AnyTypeCode/Any.cpp:

          Removed strdelete of string and wstring buffers returned in Any extraction
          to std::string and std::wstring, since the Any still owns them and will
          free them upon its destruction. Thanks to Thomas Stegemann
          <Thomas dot Stegemann at materna dot de> for reporting the problem and
          supplying a patch.

Fri Mar 30 13:04:27 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_component/component_exh.cpp:
        * TAO_IDL/be/be_visitor_component/executor_exh.cpp:
        * TAO_IDL/be/be_visitor_component/facet_exh.cpp:
          Extended documentation for the CIAO executors

Fri Mar 30 13:55:00 UTC 2012  Simon Massey  <simon dot massey at prismtech dot com>

        * tao/Compression/Compression_Manager.h:
          Methods should all be public (being virtual they were public in base and
          were all callable anyway). Removes some annoying warnings.

Wed Mar 28 16:43:00 UTC 2012  Simon Massey  <simon dot massey at prismtech dot com>

        * tao/ZIOP/ZIOP.cpp:
          Correct the debug string %d does not display a float value well. Also
          correct the maths a bit concerning other uses of ::Compression::CompressionRatio.

Wed Mar 28 12:12:00 UTC 2012  Simon Massey  <simon dot massey at prismtech dot com>

        * tests/ZIOP/Hello.cpp:
        * tests/ZIOP/client.cpp:
          Initialise all bytes being send by client and server and ensure they will
          readily compress. Valgrind kept reporting that there were unitialized
          bytes being compressed, the client didn't initialise it's big request
          octet sequence, and Hello.cpp was being too complex in it's initalization
          of Big_reply, leaving holes in it's octet sequence init.
