@@ -7,7 +7,6 @@
  *
  *  Visitor generating code for AMI4CCM Interfaces in the executor IDL
  *
- *
  *  @author Jeff Parsons
  */
 //=============================================================================
@@ -17,7 +16,8 @@
 be_visitor_ami4ccm_sendc_ex_idl::be_visitor_ami4ccm_sendc_ex_idl (
       be_visitor_context *ctx)
   : be_visitor_scope (ctx),
-    os_ (*ctx->stream ())
+    os_ (*ctx->stream ()),
+    iface_ (0)
 {
 }
 
@@ -192,4 +192,3 @@ be_visitor_ami4ccm_sendc_ex_idl::pre_process (be_decl *node)
 
   return 0;
 }
-
